Adjusting token authorization